fix: gap menu

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1009,6 +1009,10 @@ h2 {
   row-gap: 1.25rem;
 }
 
+.gap-y-6 {
+  row-gap: 1.5rem;
+}
+
 .self-center {
   align-self: center;
 }
